# Neuronal-Network

./: .gitignore  CMakeLists.txt  README.md
include/: Activations.h  Backpropagator.h  Layer.h  LossFunctions.h  Network.h  Neural_Network.h  Neuron.h  SyclLayer.h  abstract.h  pch.h
include/abstract/: Activation.h  Backpropagator.h  Layer.h  LossFunction.h  Network.h  Neuron.h
include/sycl/: Layer.h
include/sycl/abstract/: Layer.h
src/: Backpropagator.cpp  Layer.cpp  Network.cpp  Neural_Network.cpp  Neuron.cpp  SyclLayer.cpp
src/sycl/: Layer.cpp
test/include/test/: Backpropagator.h  Layer.h  Network.h  Neuron.h  SyclLayer.h  pch.h
test/include/test/sycl/: Layer.h
test/src/: PerformanceTest.cpp  SyclPerformanceTest.cpp
test/src/test/: Backpropagator.cpp  Layer.cpp  Network.cpp  Neuron.cpp  SyclLayer.cpp  main.cpp
test/src/test/sycl/: Layer.cpp
